@@ -763,6 +763,94 @@ useful when looking to compare similar rules.</p>
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="hasObjectRecursive" id="_hasObjectRecursive">
+
+		<td class="attributes"><code>
+			 public 
+			boolean
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_hasObjectRecursive">#</a>
+		<code><b>hasObjectRecursive</b>( <span><code><a href="class-Address.html">Address</a></code>|<code><a href="class-AddressGroup.html">AddressGroup</a></code> <var>$object</var></span>, <span>boolean <var>$anyIsAcceptable</var> = <span class="php-keyword1">false</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$object</var></dt>
+					<dd><code><code><a href="class-Address.html">Address</a></code>|<code><a href="class-AddressGroup.html">AddressGroup</a></code></code></dd>
+					<dt><var>$anyIsAcceptable</var></dt>
+					<dd><code>boolean</code><br>$anyIsAcceptable</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="includesStoreExpanded" id="_includesStoreExpanded">
+
+		<td class="attributes"><code>
+			 public 
+			boolean
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_includesStoreExpanded">#</a>
+		<code><b>includesStoreExpanded</b>( <span><code><a href="class-AddressRuleContainer.html">AddressRuleContainer</a></code> <var>$other</var></span>, <span>boolean <var>$anyIsAcceptable</var> = <span class="php-keyword1">true</span> </span> )</code>
+
+		<div class="description short">
+			
+<p>To determine if a store has all the Address from another store, it will
+expand AddressGroups instead of looking for them directly. Very useful when
+looking to compare similar rules.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>To determine if a store has all the Address from another store, it will
+expand AddressGroups instead of looking for them directly. Very useful when
+looking to compare similar rules.</p>
+
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$other</var></dt>
+					<dd><code><code><a href="class-AddressRuleContainer.html">AddressRuleContainer</a></code></code><br>$other</dd>
+					<dt><var>$anyIsAcceptable</var></dt>
+					<dd><code>boolean</code><br>$anyIsAcceptable if any of these objects is Any the it will return false</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br>true if Address objects from $other are all in this store<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	</table>
 
 	<table class="summary inherited">
@@ -864,6 +952,30 @@ useful when looking to compare similar rules.</p>
 	</table>
 
 
+	<table class="summary" id="magicProperties">
+	<caption>Magic properties summary</caption>
+	<tr data-order="owner" id="m$owner">
+		<td class="attributes"><code>
+			public  
+			<code><a href="class-Rule.html">Rule</a></code>|<code><a href="class-SecurityRule.html">SecurityRule</a></code>|<code><a href="class-NatRule.html">NatRule</a></code>
+		</code></td>
+
+		<td class="name">
+<var>$owner</var>		</td>
+		<td class="description"><div>
+			<a href="#m$owner" class="anchor">#</a>
+
+			<div class="description short">
+				
+			</div>
+
+			<div class="description detailed hidden">
+				
+
+			</div>
+		</div></td>
+	</tr>
+	</table>
 
 
 
