@@ -1329,14 +1329,14 @@ don't exist in the conf.</p>
 
 		<div class="description short">
 			
-<p>Compares adress objects with another store to see if they all match each
+<p>Compares address objects with another store to see if they all match each
 other</p>
 
 		</div>
 
 		<div class="description detailed hidden">
 			
-<p>Compares adress objects with another store to see if they all match each
+<p>Compares address objects with another store to see if they all match each
 other</p>
 
 
