@@ -1334,7 +1334,7 @@
 	<tr data-order="source" id="$source">
 		<td class="attributes"><code>
 			public  
-			<code><a href="class-AddressStore.html">AddressStore</a></code>
+			<code><a href="class-AddressRuleContainer.html">AddressRuleContainer</a></code>
 		</code></td>
 
 		<td class="name">
@@ -1356,7 +1356,7 @@
 	<tr data-order="destination" id="$destination">
 		<td class="attributes"><code>
 			public  
-			<code><a href="class-AddressStore.html">AddressStore</a></code>
+			<code><a href="class-AddressRuleContainer.html">AddressRuleContainer</a></code>
 		</code></td>
 
 		<td class="name">
