@@ -1490,7 +1490,7 @@ time. You should not need to call it by yourself in normal situations</p>
 	<tr data-order="xmlroot" id="$xmlroot">
 		<td class="attributes"><code>
 			public  
-			mixed
+			string[]|<code><a href="class-DOMElement.html">DOMElement</a></code>
 		</code></td>
 
 		<td class="name">
