@@ -1,7 +1,8 @@
 CHANGELOG
 
 version 1.1.5
-* new class AddressRuleContainer to replace AddressStore in rule (same way as ZoneRuleContainer in previous release)
+* new class AddressRuleContainer to replace AddressStore in Rules (same way as ZoneRuleContainer in previous release)
+* bugfix for application-default where it would not update the xml value
 
 version 1.1.4
 * rule-edit now supports multiple actions at the same time
